Windows installer: Compile TCL/TK statically.
For Windows/32bit I got a strange error message
when TCL wanted to load the library tcl86.dll:
"The procedure entry point AccessCheck could not
be located in the dynamic link library
C:\maxima-5.45.0\bin\tcl86.dll".

It works, when using the configure parameter
--enable-shared=no

wish86.exe is called wish86s.exe in that case.

This change is also included in the 32 bit Windows-installer
for Maxima 5.45.0.

(cherry picked from commit d9ef3784a454ffdc23a24558333b5f2c57f392bf)

--- a/crosscompile-windows/tcltk/CMakeLists.txt
+++ b/crosscompile-windows/tcltk/CMakeLists.txt
@@ -31,7 +31,7 @@ externalproject_add(tcl
   URL "${TCL_URL}"
   DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
   URL_MD5 ${TCL_MD5}
-  CONFIGURE_COMMAND ${CMAKE_BINARY_DIR}/tcltk/tcl-prefix/src/tcl/win/configure --build=${BUILDHOST} --host=${HOST} ${CONFIGURE64BIT} --prefix=${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}
+  CONFIGURE_COMMAND ${CMAKE_BINARY_DIR}/tcltk/tcl-prefix/src/tcl/win/configure --build=${BUILDHOST} --host=${HOST} ${CONFIGURE64BIT} --enable-shared=no --prefix=${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}
   BUILD_COMMAND $(MAKE)
         COMMAND $(MAKE) install
 )
@@ -42,7 +42,7 @@ externalproject_add(tk
   DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
   URL_MD5 ${TK_MD5}
   DEPENDS tcl
-  CONFIGURE_COMMAND ${CMAKE_BINARY_DIR}/tcltk/tk-prefix/src/tk/win/configure --build=${BUILDHOST} --host=${HOST} ${CONFIGURE64BIT} --with-tcl=${CMAKE_BINARY_DIR}/tcltk/tcl-prefix/src/tcl-build/${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}/lib --prefix=${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}
+  CONFIGURE_COMMAND ${CMAKE_BINARY_DIR}/tcltk/tk-prefix/src/tk/win/configure --build=${BUILDHOST} --host=${HOST} ${CONFIGURE64BIT} --enable-shared=no --with-tcl=${CMAKE_BINARY_DIR}/tcltk/tcl-prefix/src/tcl-build/${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}/lib --prefix=${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}
   BUILD_COMMAND $(MAKE)
         COMMAND $(MAKE) install
 )
