Simplified the build system for the language translations
- Dropped all unnecessary build tools
- Dropped the proprietary M$ html help workshop format
- tried to make all manual translations to build in the same way

--- a/doc/info/de/Makefile.am
+++ b/doc/info/de/Makefile.am
@@ -1,4 +1,4 @@
-MAKEINFOFLAGS = --enable-encoding -I . -I ..
+MAKEINFOFLAGS = --enable-encoding -I . -I .. -I ../..
 
 TEXINFO_TEX = ../texinfo.tex
 lang = de
