--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -675,7 +675,7 @@ maxima.info : maxima.texi $(maxima_TEXINFOS)
 	-$(MAKEINFO) $(AM_MAKEINFOFLAGS) $(MAKEINFOFLAGS) \
 	  --split-size=1000000 $(srcdir)/maxima.texi
 
-html: maxima_toc.html contents.hhc
+html: maxima_toc.html
 
 maxima-index.lisp: build_index.pl maxima.info
 	/usr/bin/env perl $^ ':crlf' > $@
@@ -693,17 +693,10 @@ maxima.pdf: maxima.texi $(maxima_TEXINFOS) $(pdffigures)
 	rm -f maxima.fns maxima.vr maxima.tp maxima.pg maxima.ky maxima.cp \
 	maxima.toc maxima.fn maxima.aux maxima.log
 
-contents.hhc index.hhk: maxima_singlepage.html
-	/usr/bin/env perl $(srcdir)/create_index maxima_singlepage.html
-
-# Squash error on exit from hhc
-maxima.chm: maxima.hhp contents.hhc index.hhk
-	-"$(HHC)" maxima.hhp
 
 include $(top_srcdir)/common.mk
 genericdir = $(dochtmldir)
-genericdirDATA = $(figurefiles) \
-contents.hhc index.hhk header.hhp maxima.hhp
+genericdirDATA = $(figurefiles)
 
 htmlname = maxima
 htmlinstdir = $(dochtmldir)
@@ -731,8 +724,8 @@ clean-info:
 	rm -f maxima.fns
 
 clean-html:
-	rm -f $(wildcard maxima*.html contents.hhc index.hhk maxima.chm) \
-	      $(wildcard $(addprefix $(srcdir),maxima*.html contents.hhc index.hhk maxima.chm))
+	rm -f $(wildcard maxima*.html) \
+	      $(wildcard $(addprefix $(srcdir),maxima*.html))
 
 if CHM
 install-chm: maxima.chm
