--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -74,12 +74,15 @@ do
       then includedfile_absolute=$languagedir/$f
   else if [ -e @abs_srcdir@/$f ]
        then includedfile_absolute=@abs_srcdir@/$f
-       else
-	   includedfile_absolute=`pwd`/../$f
+       else if [ -e ../../$f ]
+       then includedfile_absolute=../../$f
+	    else
+		includedfile_absolute=`pwd`/../$f
+	    fi
        fi
   fi
 
-
+  echo "Taking the file $f from the path $includedfile_absolute"
   filenamebase=`echo $includedfile_absolute | @SED@ -e 's/^.*\///;s/\.texi//'`
   @SED@ -e 's/^@deffnx*  *{[^}]*}  *\([^[:blank:]]*\).*/@anchor{Item: '$filenamebase'\/deffn\/\1}\
 &/' \
