Simplified the build system for the language translations
- Dropped all unnecessary build tools
- Dropped the proprietary M$ html help workshop format
- tried to make all manual translations to build in the same way

--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -74,8 +74,11 @@ do
       then includedfile_absolute=$languagedir/$f
   else if [ -e @abs_srcdir@/$f ]
        then includedfile_absolute=@abs_srcdir@/$f
-       else
-	   includedfile_absolute=`pwd`/../$f
+       else if [ -e ../../$f ]
+       then includedfile_absolute=../../$f
+	    else
+		includedfile_absolute=`pwd`/../$f
+	    fi
        fi
   fi
 
