--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -40,15 +40,7 @@ fi
 
 echo "$0: abs_srcdir=@abs_srcdir@, pwd=$pwd, language=$language, languagedir=$languagedir, texiinitfile=$texiinitfile"
 
-# THIS IS KIND OF TERRIBLE BECAUSE IT DEPENDS ON A CONVENTION ABOUT FILE NAMES IN DOC/INFO/*
-# Assume that per-topic Texinfo files are @include'd in
-# a top-level file. That top-level file is either maxima.texi
-# or include-maxima.texi for all languages at present (January 2022).
-
-if [ -e include-maxima.texi ]
-    then includerfile=include-maxima.texi
-    else includerfile=maxima.texi
-fi
+includerfile=include-maxima.texi
 
 # Extract all filenames that are included using @include commands in the order
 # they are included
