Consolidated the files we bundle with the manual

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -655,19 +655,12 @@ figures/worldmap_make_polygon.mac\
 figures/worldmap_region_boundaries.mac\
 figures/worldmap_region_boundaries_plus.mac
 
-if CHM
-MAXIMA_CHM = maxima.chm
-INSTALL_CHM = install-chm
-UNINSTALL_CHM = uninstall-chm
-CLEAN_CHM = clean-chm
-endif
-
 INFOLANG ?= en
 
 # We need the html docu to be generated on "make all" because if we fail
 # to do so a "sudo make install" will generate the html docu as read-only
 # fails conflicting with a subsequent "make html".
-all-local: html maxima.info maxima-index.lisp $(MAXIMA_CHM)
+all-local: html maxima.info maxima-index.lisp
 
 infoname = maxima
 include $(top_srcdir)/common-info.mk
@@ -706,8 +699,8 @@ all-local: warn_texinfo
 dist-hook: check_texinfo html
 pdf-local: maxima.pdf
 
-install-data-local: install-maxima-index $(INSTALL_CHM)
-uninstall-local: uninstall-maxima-index $(UNINSTALL_CHM)
+install-data-local: install-maxima-index
+uninstall-local: uninstall-maxima-index
 
 install-maxima-index: maxima-index.lisp
 	$(MKDIR_P) "$(DESTDIR)$(infodir)"
@@ -716,7 +709,7 @@ install-maxima-index: maxima-index.lisp
 uninstall-maxima-index: maxima-index.lisp
 	rm -f "$(DESTDIR)$(infodir)/maxima-index.lisp"
 
-clean-local: clean-info clean-html $(CLEAN_CHM)
+clean-local: clean-info clean-html
 
 clean-info:
 	rm -f $(wildcard maxima.info* maxima-index.lisp))
@@ -725,19 +718,6 @@ clean-info:
 clean-html:
 	rm -f $(wildcard maxima*.html) \
 	      $(wildcard $(addprefix $(srcdir),maxima*.html))
-
-if CHM
-install-chm: maxima.chm
-	$(MKDIR_P) "$(DESTDIR)$(docchmdir)"
-	$(INSTALL_DATA) maxima.chm "$(DESTDIR)$(docchmdir)/maxima.chm"
-
-uninstall-chm:
-	rm -f "$(DESTDIR)$(docchmdir)"
-
-clean-chm:
-	rm -f maxima.chm
-	rm -rf chm
-endif
 
 EXTRA_DIST = manual.css texi2html.init maxima.texi \
     $(genericdirDATA) $(pdffigures) $(macfiles) $(maxima_TEXINFOS) $(figurefiles) \
