--- a/doc/info/de/Makefile.am
+++ b/doc/info/de/Makefile.am
@@ -6,4 +6,4 @@ langsdir = /de
 
 include ../common-lang.mk
 
-EXTRA_DIST += manual.css texi2html.init include-maxima.texi
+EXTRA_DIST += manual.css include-maxima.texi.in
