--- a/doc/info/pt/Makefile.am
+++ b/doc/info/pt/Makefile.am
@@ -6,5 +6,4 @@ lang = pt
 langsdir = /pt
 
 include ../common-lang.mk
-
-EXTRA_DIST += texi2html.init txi-pt_PT.tex include-maxima.texi.in
+EXTRA_DIST += txi-pt_PT.tex include-maxima.texi.in
