the pt_br manual didn't share the common structure

--- a/doc/info/pt_BR/Makefile.am
+++ b/doc/info/pt_BR/Makefile.am
@@ -6,5 +6,5 @@ lang = pt_BR
 langsdir = /pt_BR
 
 include ../common-lang.mk
-EXTRA_DIST += *.update
+EXTRA_DIST += *.update include-maxima.texi.in
 
