Add `@ctindex` before each `@category`
This adds a ctindex entry before each call to category.  This was all
done by a simple script.  The ctindex entries will need to be moved by
hand to the right location (near the node, deffn, or defvr).

--- a/doc/info/category-macros.texi.in
+++ b/doc/info/category-macros.texi.in
@@ -72,6 +72,13 @@
 @end html
 @end macro
 
+@macro cat2 {name, index}
+@html
+<a href="maxima_407.html#catindex-\index\">\name\</a>
+&middot;
+@end html
+@end macro
+
 @macro closecatbox {}
 @html
 </div>
