--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -149,23 +149,31 @@ fi
 echo "$0: execute category program: \"$lispprog\" $lispargs"
 "$lispprog" $lispargs
 
-# Add documentation categories.  First, replace @bye with @ifhtml
-@SED@ -e 's/^@bye/@ifhtml/' $languagedir/maxima.texi > maxima.texi
+# Some languages don't have documentation categories so we don't want
+# to add the extra section if it's going to be empty.  So for any
+# language that has categories, maxima.texi MUST have the line "@c
+# Include documentation categories" to indicate that we will add the
+# section to the manual.
+if grep '^@c Include documentation categories' $languagedir/maxima.texi; then
+    # Add documentation categories.  First, replace @bye with @ifhtml
+    @SED@ -e 's/^@bye/@ifhtml/' $languagedir/maxima.texi > maxima.texi
 
-
-# Add all Category-*.texi files to maxima.texi.
-# If there aren't any the file named "Category-*.texi" cannot be found
-# and therefore will be excluded by the 'if'.
-( for f in Category-*.texi; do
-      if [ -e "$f" ]; then
-	 echo '@include' $f
-      fi
-  done
-  # Done with categories files, so close the @ifhtml and mark the end
-  # of the file with @bye that was removed above.
-  echo @end ifhtml
-  echo @bye
-) >> maxima.texi 
+    # Add all Category-*.texi files to maxima.texi.
+    # If there aren't any the file named "Category-*.texi" cannot be found
+    # and therefore will be excluded by the 'if'.
+    ( for f in Category-*.texi; do
+	  if [ -e "$f" ]; then
+	      echo '@include' $f
+	  fi
+      done
+      # Done with categories files, so close the @ifhtml and mark the end
+      # of the file with @bye that was removed above.
+      echo @end ifhtml
+      echo @bye
+    ) >> maxima.texi
+else
+    cat $languagedir/maxima.texi > maxima.texi
+fi
    
 if [ "X$DEBUG" = "Xyes" ]; then
     set -x
@@ -179,11 +187,21 @@ fi
 if [ -z "@NEED_MATHJAX@" ]; then
     SET_HTML_MATH="--set-customization-variable HTML_MATH=mathjax"
 fi
+
+# Currently the Russian documentation has errors in it, so we're just
+# going to force makeinfo to build anyway.
+#
+# DO NOT do this for the English documentation! Fix the English
+# documentation so that makeinfo runs without errors!
+if [ "x$language" = "xru" ]; then
+    FORCE=--force
+fi    
+
 # --no-node-files so we don't have thousands of little html files
 # There should be no errors in the texi files so don't use "--force -e
 # 10000" to force building the docs.  We want to fail building if
 # there are errors now.
-TEXIOPT="--html -c OUTPUT_ENCODING_NAME=UTF-8 -e 10000 --document-lang=$language -I . -I $languagedir -I ../.. --css-include=@abs_srcdir@/manual.css -I @abs_srcdir@/figures --init-file $texiinitfile ${SET_HTML_MATH}"
+TEXIOPT="$FORCE --html -c OUTPUT_ENCODING_NAME=UTF-8 -e 10000 --document-lang=$language -I . -I $languagedir -I ../.. --css-include=@abs_srcdir@/manual.css -I @abs_srcdir@/figures --init-file $texiinitfile ${SET_HTML_MATH}"
 # Show the commands. 
 set -x
 makeinfo --split=chapter --no-node-files --output="$languagedestdir" $TEXIOPT maxima.texi
