Use @GREP@ to get the configured grep
Also add -q to silence any output.

--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -154,7 +154,7 @@ echo "$0: execute category program: \"$lispprog\" $lispargs"
 # language that has categories, maxima.texi MUST have the line "@c
 # Include documentation categories" to indicate that we will add the
 # section to the manual.
-if grep '^@c Include documentation categories' $languagedir/maxima.texi; then
+if @GREP@ -q '^@c Include documentation categories' $languagedir/maxima.texi; then
     # Add documentation categories.  First, replace @bye with @ifhtml
     @SED@ -e 's/^@bye/@ifhtml/' $languagedir/maxima.texi > maxima.texi
 
