Do not run lisp init files when building categories
When building the categories, the invocation of lisp should disallow
loading of the user's init files so that it doesn't interfere or
change how the categories are generated.

Currently only added support for cmucl, ecl, and ccl64; need to look
up the docs for the other lisps to find out how to disable loading of
user init files.

--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -119,16 +119,16 @@ elif [ "@DEFAULTLISP@" = "clisp" ]
          lispargs="$catprogname"
 elif [ "@DEFAULTLISP@" = "cmucl" ]
     then lispprog="@CMUCL_NAME@"
-         lispargs="-load $catprogname -eval (quit)"
+         lispargs="-noinit -nositeinit -load $catprogname -eval (quit)"
 elif [ "@DEFAULTLISP@" = "scl" ]
     then lispprog="@SCL_NAME@"
          lispargs="-load $catprogname -eval (quit)"
 elif [ "@DEFAULTLISP@" = "ecl" ]
     then lispprog="@ECL_NAME@"
-         lispargs="--shell $catprogname"
+         lispargs="--norc --shell $catprogname"
 elif [ "@DEFAULTLISP@" = "ccl64" ]
     then lispprog="@CCL64_NAME@"
-         lispargs="--load $catprogname --eval (quit)"
+         lispargs="--no-init --load $catprogname --eval (quit)"
 # NOT SURE ABOUT OPENMCL; SAME ARGS AS CCL/CCL64 OR DIFFERENT ??
 elif [ "@DEFAULTLISP@" = "ccl" -o "@DEFAULTLISP@" = "openmcl" ]
     then lispprog="@OPENMCL_NAME@"
