Handle lisp args better for category program
The current code does
```
$lispprog $lispargs
```

But when lispargs is complicated, this doesn't actually pass the
desired lispargs correctly.  For example for cmucl, we want to do
```
lispargs="-noinit -nositeinit -eval '(setf *gc-verbose* nil *default-external-format* :utf8)' -eval '(set-system-external-format :utf8 :utf8)' -load $catprogname -eval '(quit)'"
```

But the actual args are parsed in an unexpected way.  This can be tested
via this simple program
```
#include <stdio.h>
int
main(int argc, char **argv)
{
        int i;

        for (i = 0; i < argc; i++) printf("argv[%d]='%s'\n", i, argv[i]);
        return 0;
}
```

Then
```
$ lispargs="-noinit -nositeinit -eval '(setf *gc-verbose* nil *default-external-format* :utf8)' -eval '(set-system-external-format :utf8 :utf8)' -load $catprogname -eval '(quit)'"
$ ./args $lispargs
argv[0]='./args'
argv[1]='-noinit'
argv[2]='-nositeinit'
argv[3]='-eval'
argv[4]=''(setf'
argv[5]='*gc-verbose*'
argv[6]='nil'
argv[7]='*default-external-format*'
argv[8]=':utf8)''
argv[9]='-eval'
argv[10]=''(set-system-external-format'
argv[11]=':utf8'
argv[12]=':utf8)''
argv[13]='-load'
argv[14]='-eval'
argv[15]=''(quit)''

```
Note that the `(setf *gc-verbose* nil)` is broken up into 3 separate
args which is not what we want.  It should be just one arg, which is
the arg to `-eval`.  What we really want is:
```
argv[0]='./args'
argv[1]='-noinit'
argv[2]='-nositeinit'
argv[3]='-eval'
argv[4]='(setf *gc-verbose* nil *default-external-format* :utf8)'
argv[5]='-eval'
argv[6]='(set-system-external-format :utf8 :utf8)'
argv[7]='-load'
argv[8]='-eval'
argv[9]='(quit)'
```

To fix this, we add a `runlisp` function to run the lisp with the
desired args.  And instead of putting all the args into lispargs, we
just call runlisp after deciding which lisp is being used and just
append the desired args to the runlisp command.

--- a/doc/info/build_html.sh.in
+++ b/doc/info/build_html.sh.in
@@ -111,45 +111,54 @@ do
   cat $f
 done | @AWK@ '!/^@c / && !/^@c$/ && (/^@deffn/ || /^@defvr/ || /^@end deffn/ || /^@end defvr/ || /@category/ || /@node/ || /^.setq .filenamebase/ || /^.setq items nil/)' | @SED@ -f @abs_srcdir@/extract_categories1.sed | @AWK@ -f @abs_srcdir@/extract_categories1.awk > $catprogname 
 
+runlisp () {
+    lispprog=$1
+    shift
+    set -x
+    echo "$0: execute category program: \"$lispprog\" $@"
+    "$lispprog" "$@"
+    #../args "$@"
+    set +x
+}
+
 if [ "@DEFAULTLISP@" = "gcl" ]
-    then lispprog="@GCL_NAME@"
-         lispargs="-batch -load $catprogname"
+    then
+         runlisp "@GCL_NAME@" -batch -load $catprogname
 elif [ "@DEFAULTLISP@" = "clisp" ]
     then lispprog="@CLISP_NAME@"
-         lispargs="$catprogname"
+         runlisp "@CLISP_NAME@" "$catprogname"
 elif [ "@DEFAULTLISP@" = "cmucl" ]
-    then lispprog="@CMUCL_NAME@"
-         lispargs="-load $catprogname -eval (quit)"
+    then
+	 # For cmucl, turn off any user init files, disable verbose GC
+	 # messages, and set the terminal external format to utf8 and
+	 # set file name encoding to utf8.
+	runlisp "@CMUCL_NAME@" -noinit -nositeinit -eval '(setf *gc-verbose* nil *default-external-format* :utf8)' -eval '(set-system-external-format :utf8 :utf8)' -load $catprogname -eval '(quit)'
 elif [ "@DEFAULTLISP@" = "scl" ]
     then lispprog="@SCL_NAME@"
-         lispargs="-load $catprogname -eval (quit)"
+         runlisp "@SCL_NAME@" -load $catprogname -eval '(quit)'
 elif [ "@DEFAULTLISP@" = "ecl" ]
-    then lispprog="@ECL_NAME@"
-         lispargs="--shell $catprogname"
+    then
+         runlisp "@ECL_NAME@" --shell $catprogname
 elif [ "@DEFAULTLISP@" = "ccl64" ]
-    then lispprog="@CCL64_NAME@"
-         lispargs="--load $catprogname --eval (quit)"
+    then
+         runlisp "@CCL64_NAME@" --load $catprogname --eval '(quit)'
 # NOT SURE ABOUT OPENMCL; SAME ARGS AS CCL/CCL64 OR DIFFERENT ??
 elif [ "@DEFAULTLISP@" = "ccl" -o "@DEFAULTLISP@" = "openmcl" ]
-    then lispprog="@OPENMCL_NAME@"
-         lispargs="--load $catprogname --eval (quit)"
+    then
+         runlisp "@OPENMCL_NAME@" --load $catprogname --eval '(quit)'
 elif [ "@DEFAULTLISP@" = "sbcl" ]
-    then lispprog="@SBCL_NAME@"
-         lispargs="--script $catprogname"
+    then
+         runlisp "@SBCL_NAME@" --script $catprogname
 elif [ "@DEFAULTLISP@" = "abcl" ]
     then lispprog="@JRE@"
-         lispargs="-jar @ABCL_JAR@ --load $catprogname --eval (quit)"
+         runlisp "@JRE@" -jar @ABCL_JAR@ --load $catprogname --eval '(quit)'
 elif [ "@DEFAULTLISP@" = "acl" ]
     then lispprog="@ACL_NAME@"
-         lispargs="-L $catprogname --kill"
+         runlisp "@ACL_NAME@" -L $catprogname --kill
 else
     echo "$0: DEFAULTLISP = @DEFAULTLISP@ not recognized, assume '@DEFAULTLISP@ $catprogname' is acceptable."
-    lispprog="@DEFAULTLISP@"
-    lispargs="$catprogname"
+    runlisp "@DEFAULTLISP@ $catprogname"
 fi
-
-echo "$0: execute category program: \"$lispprog\" $lispargs"
-"$lispprog" $lispargs
 
 # Some languages don't have documentation categories so we don't want
 # to add the extra section if it's going to be empty.  So for any
